@@ -17,8 +17,6 @@
 package org.gradle.plugin.devel.plugins;
 
 import org.gradle.api.Action;
-import org.gradle.api.JavaVersion;
-import org.gradle.api.NonNullApi;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
@@ -32,17 +30,18 @@ import org.gradle.api.file.FileCopyDetails;
 import org.gradle.api.internal.artifacts.dsl.dependencies.DependencyFactoryInternal;
 import org.gradle.api.internal.artifacts.ivyservice.projectmodule.ProjectPublicationRegistry;
 import org.gradle.api.internal.plugins.PluginDescriptor;
+import org.gradle.api.internal.project.ProjectIdentity;
 import org.gradle.api.internal.project.ProjectInternal;
 import org.gradle.api.internal.tasks.JvmConstants;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
 import org.gradle.api.plugins.JavaBasePlugin;
 import org.gradle.api.plugins.JavaLibraryPlugin;
-import org.gradle.api.plugins.JavaPluginExtension;
 import org.gradle.api.plugins.internal.JavaPluginHelper;
 import org.gradle.api.provider.Provider;
 import org.gradle.api.tasks.ClasspathNormalizer;
 import org.gradle.api.tasks.Copy;
+import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.bundling.Jar;
@@ -50,9 +49,12 @@ import org.gradle.api.tasks.testing.Test;
 import org.gradle.initialization.buildsrc.GradlePluginApiVersionAttributeConfigurationAction;
 import org.gradle.internal.Describables;
 import org.gradle.internal.DisplayName;
+import org.gradle.internal.buildoption.InternalFlag;
+import org.gradle.internal.buildoption.InternalOptions;
 import org.gradle.internal.component.local.model.OpaqueComponentIdentifier;
-import org.gradle.jvm.toolchain.JavaLauncher;
-import org.gradle.jvm.toolchain.JavaToolchainService;
+import org.gradle.internal.jvm.JpmsConfiguration;
+import org.gradle.internal.installation.CurrentGradleInstallation;
+import org.gradle.internal.installation.GradleInstallation;
 import org.gradle.plugin.devel.GradlePluginDevelopmentExtension;
 import org.gradle.plugin.devel.PluginDeclaration;
 import org.gradle.plugin.devel.tasks.GeneratePluginDescriptors;
@@ -62,6 +64,7 @@ import org.gradle.plugin.use.PluginId;
 import org.gradle.plugin.use.internal.DefaultPluginId;
 import org.gradle.plugin.use.resolve.internal.local.PluginPublication;
 import org.gradle.process.CommandLineArgumentProvider;
+import org.jspecify.annotations.NullMarked;
 
 import java.io.File;
 import java.net.MalformedURLException;
@@ -69,7 +72,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -86,9 +88,12 @@ import static org.gradle.api.internal.lambdas.SerializableLambdas.spec;
  *
  * @see <a href="https://docs.gradle.org/current/userguide/java_gradle_plugin.html">Gradle plugin development reference</a>
  */
-@NonNullApi
+@NullMarked
 public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
+
     private static final Logger LOGGER = Logging.getLogger(JavaGradlePluginPlugin.class);
+
+    @Deprecated
     static final String API_CONFIGURATION = JvmConstants.API_CONFIGURATION_NAME;
     static final String JAR_TASK = "jar";
     static final String PROCESS_RESOURCES_TASK = "processResources";
@@ -97,7 +102,7 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
     static final String CLASSES_PATTERN = "**/*.class";
     static final String BAD_IMPL_CLASS_WARNING_MESSAGE = "%s: A valid plugin descriptor was found for %s but the implementation class %s was not found in the jar.";
     static final String INVALID_DESCRIPTOR_WARNING_MESSAGE = "%s: A plugin descriptor was found for %s but it was invalid.";
-    static final String NO_DESCRIPTOR_WARNING_MESSAGE = "%s: No valid plugin descriptors were found in META-INF/" + GRADLE_PLUGINS + "";
+    static final String NO_DESCRIPTOR_WARNING_MESSAGE = "%s: No valid plugin descriptors were found in META-INF/" + GRADLE_PLUGINS;
     static final String DECLARED_PLUGIN_MISSING_MESSAGE = "%s: Could not find plugin descriptor of %s at META-INF/" + GRADLE_PLUGINS + "/%s.properties";
     static final String DECLARATION_MISSING_ID_MESSAGE = "Missing id for %s";
     static final String DECLARATION_MISSING_IMPLEMENTATION_MESSAGE = "Missing implementationClass for %s";
@@ -105,6 +110,13 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
     static final String PLUGIN_UNDER_TEST_METADATA_TASK_NAME = "pluginUnderTestMetadata";
     static final String GENERATE_PLUGIN_DESCRIPTORS_TASK_NAME = "pluginDescriptors";
     static final String VALIDATE_PLUGINS_TASK_NAME = "validatePlugins";
+
+    /**
+     * Suppress adding the {@code DependencyHandler#gradleApi()} dependency.
+     *
+     * Experimental property used to test using an external Gradle API dependency.
+     */
+    static final InternalFlag EXPERIMENTAL_SUPPRESS_GRADLE_API_PROPERTY = new InternalFlag("org.gradle.unsafe.suppress-gradle-api");
 
     /**
      * The task group used for tasks created by the Java Gradle plugin development plugin.
@@ -137,8 +149,8 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
     @Override
     public void apply(Project project) {
         project.getPluginManager().apply(JavaLibraryPlugin.class);
-        applyDependencies(project);
         GradlePluginDevelopmentExtension extension = createExtension(project);
+        applyDependencies(project);
         configureJarTask(project, extension);
         configureTestKit(project, extension);
         configurePublishing(project);
@@ -152,12 +164,21 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
     private void registerPlugins(Project project, GradlePluginDevelopmentExtension extension) {
         ProjectInternal projectInternal = (ProjectInternal) project;
         ProjectPublicationRegistry registry = projectInternal.getServices().get(ProjectPublicationRegistry.class);
-        extension.getPlugins().all(pluginDeclaration -> registry.registerPublication(projectInternal, new LocalPluginPublication(pluginDeclaration)));
+        ProjectIdentity projectIdentity = projectInternal.getProjectIdentity();
+        extension.getPlugins().all(pluginDeclaration -> {
+            pluginDeclaration.setId(pluginDeclaration.getName());
+            registry.registerPublication(projectIdentity, new LocalPluginPublication(pluginDeclaration));
+        });
     }
 
-    private void applyDependencies(Project project) {
+    private static void applyDependencies(Project project) {
+        // TODO This should be provided via GradlePluginDevelopmentExtension.gradleApiVersion once it's not an experimental feature
+        InternalOptions internalOptions = ((ProjectInternal) project).getServices().get(InternalOptions.class);
+        if (internalOptions.getOption(EXPERIMENTAL_SUPPRESS_GRADLE_API_PROPERTY).get()) {
+            return;
+        }
         DependencyHandler dependencies = project.getDependencies();
-        dependencies.add(API_CONFIGURATION, dependencies.gradleApi());
+        dependencies.add(JvmConstants.COMPILE_ONLY_API_CONFIGURATION_NAME, dependencies.gradleApi());
     }
 
     private void configureJarTask(Project project, GradlePluginDevelopmentExtension extension) {
@@ -263,20 +284,22 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
 
             task.getClasses().setFrom((Callable<Object>) () -> extension.getPluginSourceSet().getOutput().getClassesDirs());
             task.getClasspath().setFrom((Callable<Object>) () -> extension.getPluginSourceSet().getCompileClasspath());
-
-            task.getLauncher().convention(toolchainLauncher(project));
         });
         project.getTasks().named(JavaBasePlugin.CHECK_TASK_NAME, check -> check.dependsOn(validatorTask));
+
+        // Published plugins get stricter validation by default
+        project.getPluginManager().withPlugin("publishing", p -> enableStricterValidation(validatorTask));
+        project.getPluginManager().withPlugin("com.gradle.plugin-publish", p -> enableStricterValidation(validatorTask));
+    }
+
+    private static void enableStricterValidation(TaskProvider<ValidatePlugins> validatePlugins) {
+        validatePlugins.configure(task -> {
+            task.getEnableStricterValidation().convention(true);
+        });
     }
 
     private void configureDependencyGradlePluginsResolution(Project project) {
         new GradlePluginApiVersionAttributeConfigurationAction().execute((ProjectInternal) project);
-    }
-
-    private Provider<JavaLauncher> toolchainLauncher(Project project) {
-        JavaPluginExtension extension = project.getExtensions().findByType(JavaPluginExtension.class);
-        JavaToolchainService service = project.getExtensions().findByType(JavaToolchainService.class);
-        return service.launcherFor(extension.getToolchain());
     }
 
     /**
@@ -428,18 +451,26 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
             Set<SourceSet> testSourceSets = extension.getTestSourceSets();
             project.getNormalization().getRuntimeClasspath().ignore(PluginUnderTestMetadata.METADATA_FILE_NAME);
 
+            GradleInstallation gradleInstallation = ((ProjectInternal) project).getServices().get(CurrentGradleInstallation.class).getInstallation();
             project.getTasks().withType(Test.class).configureEach(test -> {
                 test.getInputs()
-                    .files(pluginClasspathTask.get().getPluginClasspath())
+                    .files(pluginClasspathTask.map(PluginUnderTestMetadata::getPluginClasspath))
                     .withPropertyName("pluginClasspath")
                     .withNormalizer(ClasspathNormalizer.class);
 
-                test.getJvmArgumentProviders().add(new AddOpensCommandLineArgumentProvider(test));
+                test.getJvmArgumentProviders().add(new GradleJvmCommandLineArgumentProvider(test));
+                if (gradleInstallation != null) {
+                    test.getInputs()
+                        .dir(gradleInstallation.getGradleHome())
+                        .withPathSensitivity(PathSensitivity.RELATIVE)
+                        .withPropertyName("gradleHome");
+                }
             });
 
             for (SourceSet testSourceSet : testSourceSets) {
                 String implementationConfigurationName = testSourceSet.getImplementationConfigurationName();
                 dependencies.add(implementationConfigurationName, dependencies.gradleTestKit());
+                dependencies.add(implementationConfigurationName, dependencies.gradleApi());
                 String runtimeOnlyConfigurationName = testSourceSet.getRuntimeOnlyConfigurationName();
                 dependencies.add(runtimeOnlyConfigurationName, project.getLayout().files(pluginClasspathTask));
             }
@@ -447,22 +478,20 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
     }
 
     /**
-     * Provides an {@code --add-opens} flag for {@code java.base/java.lang} if the JVM version
-     * a given test task is running does not allow reflection of JDK internals by default.
+     * Provides JVM argumensts necessary to to run a Gradle daemon depending on the Gradle version used.
      * Needed when using ProjectBuilder in tests.
      */
-    private static class AddOpensCommandLineArgumentProvider implements CommandLineArgumentProvider {
+    private static class GradleJvmCommandLineArgumentProvider implements CommandLineArgumentProvider {
         private final Test test;
 
-        private AddOpensCommandLineArgumentProvider(Test test) {
+        private GradleJvmCommandLineArgumentProvider(Test test) {
             this.test = test;
         }
 
         @Override
         public Iterable<String> asArguments() {
-            return test.getJavaVersion().isCompatibleWith(JavaVersion.VERSION_1_9)
-                ? Collections.singletonList("--add-opens=java.base/java.lang=ALL-UNNAMED")
-                : Collections.emptyList();
+            int majorVersion = Integer.parseInt(test.getJavaVersion().getMajorVersion());
+            return JpmsConfiguration.forDaemonProcesses(majorVersion, true);
         }
     }
 
